// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-avatar ant-avatar-circle"
    style={Object {}}
  >
    <span
      className="ant-avatar-string"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      D
    </span>
  </span>
</div>
`;

exports[`Storyshots Avatar Icon 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-avatar ant-avatar-circle ant-avatar-icon"
    style={Object {}}
  >
    <svg
      className=""
      fill="#7E7F86"
      height={32}
      width={32}
    >
      dassana.svg
    </svg>
  </span>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Default
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Loading 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="container-0-2-3 container-d0-0-2-4"
  >
     
  </span>
</div>
`;

exports[`Storyshots Button Pending 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      style={
        Object {
          "paddingRight": 8,
        }
      }
    >
      <div
        className="ant-spin ant-spin-spinning"
      >
        <span
          aria-label="loading"
          className="anticon anticon-loading anticon-spin loading-0-2-5 loading-d0-0-2-6 ant-spin-dot"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </div>
    </span>
    <span>
      Pending
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-primary"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-primary"
    data-test="button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      Primary Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Checkbox Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper"
  >
    <span
      className="ant-checkbox"
      style={Object {}}
    >
      <input
        checked={false}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Default Checked 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper"
  >
    <span
      className="ant-checkbox ant-checkbox-checked"
      style={Object {}}
    >
      <input
        checked={true}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      className="ant-checkbox ant-checkbox-disabled"
      style={Object {}}
    >
      <input
        checked={false}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Disabled Checked 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      className="ant-checkbox ant-checkbox-checked ant-checkbox-disabled"
      style={Object {}}
    >
      <input
        checked={true}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Label 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper"
  >
    <span
      className="ant-checkbox"
      style={Object {}}
    >
      <input
        checked={false}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
    <span>
      Checkbox
    </span>
  </label>
</div>
`;

exports[`Storyshots ChipInput Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-2-10"
    >
      <input
        autoFocus={false}
        className="ant-input container-0-2-12 container-d0-0-2-14"
        data-test="input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="@yourdomain.com"
        type="text"
        value=""
      />
    </div>
    <div
      className="tagsWrapper-0-2-9 tagsWrapper-d0-0-2-11"
    >
      <span
        className="ant-tag tag-0-2-8"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @lorem.com
      </span>
      <span
        className="ant-tag tag-0-2-8"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @ipsum.com
        <span
          aria-label="close"
          className="anticon anticon-close ant-tag-close-icon"
          onClick={[Function]}
          role="img"
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="container-0-2-15 container-d0-0-2-16"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ChipInput Full Width 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-2-10"
    >
      <input
        autoFocus={false}
        className="ant-input container-0-2-12 container-d1-0-2-18"
        data-test="input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      className="tagsWrapper-0-2-9 tagsWrapper-d1-0-2-17"
    />
    <div
      className="container-0-2-15 container-d1-0-2-19"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ChipInput Loading 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-2-10"
    >
      <div
        className="container-0-2-25 container-d0-0-2-27"
      >
        <div
          className="inputSkeleton-0-2-26"
        >
          <span
            className="container-0-2-3 container-d1-0-2-28"
          >
             
          </span>
        </div>
      </div>
    </div>
    <div
      className="tagsWrapper-0-2-9 tagsWrapper-d3-0-2-23"
    >
      <span
        className="container-0-2-3 container-d2-0-2-29"
      >
         
      </span>
      <span
        className="container-0-2-3 container-d3-0-2-30 skeleton-0-2-7"
      >
         
      </span>
    </div>
    <div
      className="container-0-2-15 container-d3-0-2-31"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ChipInput Validated With Addon 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-2-10"
    >
      <span
        className="ant-input-group-wrapper container-0-2-12 container-d2-0-2-21"
      >
        <span
          className="ant-input-wrapper ant-input-group"
        >
          <span
            className="ant-input-group-addon"
          >
            @
          </span>
          <input
            autoFocus={false}
            className="ant-input"
            data-test="input"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="yourdomain.com"
            style={null}
            type="text"
            value=""
          />
        </span>
      </span>
    </div>
    <div
      className="tagsWrapper-0-2-9 tagsWrapper-d2-0-2-20"
    >
      <span
        className="ant-tag tag-0-2-8"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @lorem.com
      </span>
      <span
        className="ant-tag tag-0-2-8"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @ipsum.com
        <span
          aria-label="close"
          className="anticon anticon-close ant-tag-close-icon"
          onClick={[Function]}
          role="img"
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="container-0-2-15 container-d2-0-2-22"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ColoredDot Colored 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="container-0-2-32"
  >
    <p>
      Hover over colored dot to show tooltip.
    </p>
    <span
      className="coloredDot-0-2-34 dot-0-2-33"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Icon Custom 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <img
    alt=""
    className=""
    height={64}
    src="https://dummyimage.com/600x400/000/fff&text=Dassana"
  />
</div>
`;

exports[`Storyshots Icon Predefined 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <svg
    className=""
    fill="#7E7F86"
    height={64}
    width={64}
  >
    dassana.svg
  </svg>
</div>
`;

exports[`Storyshots IconButton Circle 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="circle-0-2-35 circle-d3-0-2-45 iconButton-0-2-39 hasBorder-0-2-37 hasBorder-d4-0-2-46"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 icon-0-2-38 icon-d5-0-2-47"
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots IconButton Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="iconButton-0-2-39"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 icon-0-2-38 icon-d2-0-2-44"
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots IconButton Pending 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="circle-0-2-35 circle-d6-0-2-48 disabled-0-2-36 iconButton-0-2-39 hasBorder-0-2-37 hasBorder-d7-0-2-49"
    onClick={[Function]}
  >
    <span
      className="pending-0-2-40"
    />
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 icon-0-2-38 icon-d8-0-2-50"
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Input Addons 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-input-group-wrapper container-0-2-12 container-d10-0-2-59"
  >
    <span
      className="ant-input-wrapper ant-input-group"
    >
      <span
        className="ant-input-group-addon"
      >
        @
      </span>
      <input
        autoFocus={false}
        className="ant-input"
        data-test="input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="yourdomain"
        style={null}
        type="text"
        value=""
      />
      <span
        className="ant-input-group-addon"
      >
        .com
      </span>
    </span>
  </span>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-12 container-d4-0-2-51"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input ant-input-disabled container-0-2-12 container-d9-0-2-58"
    data-test="input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Error 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-12 container-d8-0-2-57 error-0-2-13"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Full Width 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-12 container-d7-0-2-56"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Loading 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="container-0-2-25 container-d1-0-2-54"
  >
    <div
      className="inputSkeleton-0-2-26"
    >
      <span
        className="container-0-2-3 container-d4-0-2-55"
      >
         
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Placeholder 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-12 container-d5-0-2-52"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="Search..."
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Link Click 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <a
    className="ant-typography"
    data-test="link"
    onClick={[Function]}
    style={
      Object {
        "WebkitLineClamp": undefined,
      }
    }
    target="_self"
  >
    <u>
      Click
    </u>
  </a>
</div>
`;

exports[`Storyshots Link Href 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <a
    className="ant-typography"
    data-test="link"
    href=" "
    style={
      Object {
        "WebkitLineClamp": undefined,
      }
    }
    target="_self"
  >
    <u>
      Href
    </u>
  </a>
</div>
`;

exports[`Storyshots Modal Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;

exports[`Storyshots MultipleChoice Multiple 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <h3
    className="heading-0-2-61 heading-d1-0-2-64"
  >
    Click on the bordered box to use keyboard shortcuts
  </h3>
  <p
    className="info-0-2-62 info-d2-0-2-65"
  >
    Press Up, Down, Left, Right arrow keys to navigate. Press enter or alphabet keys to select/deselect.
  </p>
  <div
    className="eventTarget-0-2-60 eventTarget-d0-0-2-63"
    tabIndex={0}
  >
    <div
      className="container-0-2-66 container-d0-0-2-67"
    >
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d0-0-2-74"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          A
        </div>
        <span
          className="label-0-2-72"
        >
          CISO
        </span>
      </div>
      <div
        className="activeItem-0-2-68 multipleChoiceItem-0-2-73 multipleChoiceItem-d1-0-2-75"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          B
        </div>
        <span
          className="label-0-2-72"
        >
          Sr Leadership
        </span>
        <span
          className="checkmark-0-2-69"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 "
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d2-0-2-76"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          C
        </div>
        <span
          className="label-0-2-72"
        >
          SecOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d3-0-2-77"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          D
        </div>
        <span
          className="label-0-2-72"
        >
          Cloud Architect
        </span>
      </div>
      <div
        className="activeItem-0-2-68 multipleChoiceItem-0-2-73 multipleChoiceItem-d4-0-2-78"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          E
        </div>
        <span
          className="label-0-2-72"
        >
          DevOps
        </span>
        <span
          className="checkmark-0-2-69"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 "
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d5-0-2-79"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          F
        </div>
        <span
          className="label-0-2-72"
        >
          NetSec
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d6-0-2-80"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          G
        </div>
        <span
          className="label-0-2-72"
        >
          AppDev
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d7-0-2-81"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          H
        </div>
        <span
          className="label-0-2-72"
        >
          Compliance
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d8-0-2-82"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          I
        </div>
        <span
          className="label-0-2-72"
        >
          Other
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultipleChoice Single 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <h3
    className="heading-0-2-61 heading-d4-0-2-84"
  >
    Click on the bordered box to use keyboard shortcuts
  </h3>
  <p
    className="info-0-2-62 info-d5-0-2-85"
  >
    Press Up, Down, Left, Right arrow keys to navigate. Press enter or alphabet keys to select/deselect.
  </p>
  <div
    className="eventTarget-0-2-60 eventTarget-d3-0-2-83"
    tabIndex={0}
  >
    <div
      className="container-0-2-66 container-d1-0-2-86"
    >
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d9-0-2-87"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          A
        </div>
        <span
          className="label-0-2-72"
        >
          CISO
        </span>
      </div>
      <div
        className="activeItem-0-2-68 multipleChoiceItem-0-2-73 multipleChoiceItem-d10-0-2-88"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          B
        </div>
        <span
          className="label-0-2-72"
        >
          Sr Leadership
        </span>
        <span
          className="checkmark-0-2-69"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 "
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d11-0-2-89"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          C
        </div>
        <span
          className="label-0-2-72"
        >
          SecOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d12-0-2-90"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          D
        </div>
        <span
          className="label-0-2-72"
        >
          Cloud Architect
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d13-0-2-91"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          E
        </div>
        <span
          className="label-0-2-72"
        >
          DevOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d14-0-2-92"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          F
        </div>
        <span
          className="label-0-2-72"
        >
          NetSec
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d15-0-2-93"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          G
        </div>
        <span
          className="label-0-2-72"
        >
          AppDev
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d16-0-2-94"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          H
        </div>
        <span
          className="label-0-2-72"
        >
          Compliance
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d17-0-2-95"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          I
        </div>
        <span
          className="label-0-2-72"
        >
          Other
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultipleChoice Single Column 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <h3
    className="heading-0-2-61 heading-d7-0-2-97"
  >
    Click on the bordered box to use keyboard shortcuts
  </h3>
  <p
    className="info-0-2-62 info-d8-0-2-98"
  >
    Press Up, Down, Left, Right arrow keys to navigate. Press enter or alphabet keys to select/deselect.
  </p>
  <div
    className="eventTarget-0-2-60 eventTarget-d6-0-2-96"
    tabIndex={0}
  >
    <div
      className="container-0-2-66 container-d2-0-2-99"
    >
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d18-0-2-100"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          A
        </div>
        <span
          className="label-0-2-72"
        >
          SecOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d19-0-2-101"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          B
        </div>
        <span
          className="label-0-2-72"
        >
          Cloud Architect
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d20-0-2-102"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          C
        </div>
        <span
          className="label-0-2-72"
        >
          DevOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d21-0-2-103"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          D
        </div>
        <span
          className="label-0-2-72"
        >
          NetSec
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d22-0-2-104"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          E
        </div>
        <span
          className="label-0-2-72"
        >
          AppDev
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d23-0-2-105"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          F
        </div>
        <span
          className="label-0-2-72"
        >
          Compliance
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-73 multipleChoiceItem-d24-0-2-106"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-71"
        >
          G
        </div>
        <span
          className="label-0-2-72"
        >
          Other
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Notification Error 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Error
    </span>
  </button>
  <div
    className="container-0-2-107"
  />
</div>
`;

exports[`Storyshots Notification Info 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Info
    </span>
  </button>
  <div
    className="container-0-2-107"
  />
</div>
`;

exports[`Storyshots Notification Success 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <div
    className="container-0-2-107"
  />
</div>
`;

exports[`Storyshots Notification Warning 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
  <div
    className="container-0-2-107"
  />
</div>
`;

exports[`Storyshots Notifications Error 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Error
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Info 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Info
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Success 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Success
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Warning 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
</div>
`;

exports[`Storyshots PageLoader Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="container-0-2-108"
  >
    <svg>
      loading_lightbulb.svg
    </svg>
  </div>
</div>
`;

exports[`Storyshots Popover Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    style={
      Object {
        "padding": 75,
      }
    }
  >
    <span
      className=""
      data-test="popover-trigger"
      onClick={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className=""
        fill="#7E7F86"
        height={32}
        width={32}
      >
        dassana.svg
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Popover Title 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    style={
      Object {
        "padding": 75,
      }
    }
  >
    <span
      className=""
      data-test="popover-trigger"
      onClick={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className=""
        fill="#7E7F86"
        height={32}
        width={32}
      >
        dassana.svg
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Radio Group Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="ant-radio-group ant-radio-group-solid"
  >
    <label
      className="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        className="ant-radio-button ant-radio-button-checked"
        style={Object {}}
      >
        <input
          checked={true}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="high"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        High
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper"
    >
      <span
        className="ant-radio-button"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="medium"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Medium
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper"
    >
      <span
        className="ant-radio-button"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="low"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Low
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Radio Group Loading 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="container-0-2-109"
  >
    <div
      className="skeletonButton-0-2-111"
    >
      <span
        className="container-0-2-3 container-d5-0-2-112 skeleton-0-2-110"
      >
         
      </span>
    </div>
    <div
      className="skeletonButton-0-2-111"
    >
      <span
        className="container-0-2-3 container-d6-0-2-113 skeleton-0-2-110"
      >
         
      </span>
    </div>
    <div
      className="skeletonButton-0-2-111"
    >
      <span
        className="container-0-2-3 container-d7-0-2-114 skeleton-0-2-110"
      >
         
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Group Partially Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="ant-radio-group ant-radio-group-solid"
  >
    <label
      className="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        className="ant-radio-button ant-radio-button-checked"
        style={Object {}}
      >
        <input
          checked={true}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="high"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        High
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper"
    >
      <span
        className="ant-radio-button"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="medium"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Medium
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        className="ant-radio-button ant-radio-button-disabled"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={true}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="low"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Low
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots SVGImage Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <svg
    height="100%"
    width="100%"
  >
    aws.svg
  </svg>
</div>
`;

exports[`Storyshots Select Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-115"
  >
    <div
      className="container-0-2-116 container-d0-0-2-120"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={true}
              role="combobox"
              style={
                Object {
                  "opacity": 0,
                }
              }
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            className="ant-select-selection-placeholder"
          >
            
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Full Width 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-115"
  >
    <div
      className="container-0-2-116 container-d2-0-2-126"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={true}
              role="combobox"
              style={
                Object {
                  "opacity": 0,
                }
              }
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            className="ant-select-selection-item"
          >
            <div
              className="option-0-2-123"
            >
              <span
                className="optionText-0-2-124"
                onMouseEnter={[Function]}
              >
                Lorem
              </span>
            </div>
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Icon 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-115"
  >
    <div
      className="container-0-2-116 container-d1-0-2-121"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={true}
              role="combobox"
              style={
                Object {
                  "opacity": 0,
                }
              }
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            className="ant-select-selection-item"
          >
            <div
              className="option-0-2-123"
            >
              <span
                className="icon-0-2-122"
              >
                <svg
                  className=""
                  fill="#7E7F86"
                  height={15}
                  width={15}
                >
                  aws.svg
                </svg>
              </span>
              <span
                className="optionText-0-2-124"
                onMouseEnter={[Function]}
              >
                AWS
              </span>
            </div>
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Search 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-115"
  >
    <div
      className="container-0-2-116 container-d3-0-2-127"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow ant-select-show-search"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={false}
              role="combobox"
              style={
                Object {
                  "opacity": null,
                }
              }
              type="search"
              unselectable={null}
              value=""
            />
          </span>
          <span
            className="ant-select-selection-placeholder"
          >
            Choose a Cloud Provider
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Selected Option Width 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-115"
  >
    <div
      className="container-0-2-116 container-d4-0-2-128"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow ant-select-show-search"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={false}
              role="combobox"
              style={
                Object {
                  "opacity": null,
                }
              }
              type="search"
              unselectable={null}
              value=""
            />
          </span>
          <span
            className="ant-select-selection-placeholder"
          >
            Choose a Cloud Provider
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShortcutMicrocopy Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="shortcutMicrocopy-0-2-132"
    data-test="shortcut-microcopy"
  >
    <div
      className="wrapper-0-2-133"
    >
      <span
        className="label-0-2-131"
      >
        press 
      </span>
      <span
        className="keyName-0-2-130"
      >
        enter 
      </span>
      <span
        className="icon-0-2-129"
      >
        ↵
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShortcutMicrocopy Icon Only 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="shortcutMicrocopy-0-2-132"
    data-test="shortcut-microcopy"
  >
    <div
      className="wrapper-0-2-133"
    >
      <span
        className="label-0-2-131"
      >
        press 
      </span>
      <span
        className="icon-0-2-129"
      >
        ⌘
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShortcutMicrocopy Mixed 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="shortcutMicrocopy-0-2-132"
    data-test="shortcut-microcopy"
  >
    <div
      className="wrapper-0-2-133"
    >
      <span
        className="label-0-2-131"
      >
        press 
      </span>
      <span
        className="keyName-0-2-130"
      >
        cmd 
      </span>
      <span
        className="icon-0-2-129"
      >
        ⌘
      </span>
      <span>
         + 
      </span>
      <span
        className="keyName-0-2-130"
      >
        Enter 
      </span>
      <span
        className="icon-0-2-129"
      >
        <span
          aria-label="enter"
          className="anticon anticon-enter"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="enter"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShortcutMicrocopy Predefined Keys 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="shortcutMicrocopy-0-2-132"
    data-test="shortcut-microcopy"
  >
    <div
      className="wrapper-0-2-133"
    >
      <span
        className="label-0-2-131"
      >
        press 
      </span>
      <span
        className="keyName-0-2-130"
      >
        cmd 
      </span>
      <span
        className="icon-0-2-129"
      >
        ⌘
      </span>
      <span>
         + 
      </span>
      <span
        className="keyName-0-2-130"
      >
        enter 
      </span>
      <span
        className="icon-0-2-129"
      >
        ↵
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Skeleton Circle 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="container-0-2-3 container-d9-0-2-135"
  >
     
  </span>
</div>
`;

exports[`Storyshots Skeleton Count 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="container-0-2-3 container-d10-0-2-136"
  >
     
  </span>
  <span
    className="container-0-2-3 container-d10-0-2-136"
  >
     
  </span>
  <span
    className="container-0-2-3 container-d10-0-2-136"
  >
     
  </span>
  <span
    className="container-0-2-3 container-d10-0-2-136"
  >
     
  </span>
  <span
    className="container-0-2-3 container-d10-0-2-136"
  >
     
  </span>
</div>
`;

exports[`Storyshots Skeleton Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="container-0-2-3 container-d8-0-2-134"
  >
     
  </span>
</div>
`;

exports[`Storyshots Tabs Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
  >
    <div
      className="tabsList-0-2-138"
    >
      <li
        className="tab-0-2-140 activeTab-0-2-139"
        onClick={[Function]}
      >
        Foo
      </li>
      <li
        className="tab-0-2-140"
        onClick={[Function]}
      >
        Bar
      </li>
    </div>
    <div
      className="tabPane-0-2-137"
    >
      <div
        className="tabPane-0-2-141"
      >
        Foo content text
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Colored 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-tag ant-tag-has-color"
    style={
      Object {
        "backgroundColor": "#108ee9",
      }
    }
  >
    Colored
    <span
      aria-label="close"
      className="anticon anticon-close ant-tag-close-icon"
      onClick={[Function]}
      role="img"
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Storyshots Tag Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-tag"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    Default
    <span
      aria-label="close"
      className="anticon anticon-close ant-tag-close-icon"
      onClick={[Function]}
      role="img"
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Storyshots TimeInput Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-115"
  >
    <div
      className="ant-picker ant-picker-disabled"
      onMouseUp={[Function]}
    >
      <div
        className="ant-picker-input"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-test="time-input"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          placeholder=""
          readOnly={true}
          size={10}
          title=""
          value=""
        />
        <span
          className="ant-picker-suffix"
        >
          <span
            aria-label="clock-circle"
            className="anticon anticon-clock-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="clock-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeInput Error 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-115"
  >
    <div
      className="ant-picker error-0-2-143"
      onMouseUp={[Function]}
    >
      <div
        className="ant-picker-input"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-test="time-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          placeholder=""
          readOnly={true}
          size={10}
          title=""
          value=""
        />
        <span
          className="ant-picker-suffix"
        >
          <span
            aria-label="clock-circle"
            className="anticon anticon-clock-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="clock-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeInput Hours 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-115"
  >
    <div
      className="ant-picker"
      onMouseUp={[Function]}
    >
      <div
        className="ant-picker-input"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-test="time-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          placeholder=""
          readOnly={true}
          size={10}
          title=""
          value=""
        />
        <span
          className="ant-picker-suffix"
        >
          <span
            aria-label="clock-circle"
            className="anticon anticon-clock-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="clock-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeInput Placeholder 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-115"
  >
    <div
      className="ant-picker"
      onMouseUp={[Function]}
    >
      <div
        className="ant-picker-input"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-test="time-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          placeholder="Select time"
          readOnly={true}
          size={10}
          title=""
          value=""
        />
        <span
          className="ant-picker-suffix"
        >
          <span
            aria-label="clock-circle"
            className="anticon anticon-clock-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="clock-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    aria-checked={false}
    className="ant-switch"
    data-test="toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    type="button"
  >
    <div
      className="ant-switch-handle"
    />
    <span
      className="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`Storyshots Toggle Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    aria-checked={false}
    className="ant-switch ant-switch-disabled"
    data-test="toggle"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    type="button"
  >
    <div
      className="ant-switch-handle"
    />
    <span
      className="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`Storyshots Toggle Small 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    aria-checked={false}
    className="ant-switch ant-switch-small"
    data-test="toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    type="button"
  >
    <div
      className="ant-switch-handle"
    />
    <span
      className="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`Storyshots Tooltip Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    style={
      Object {
        "padding": 75,
      }
    }
  >
    <span
      className=""
      data-test="tooltip-trigger"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <svg
        className=""
        fill="#7E7F86"
        height={32}
        width={32}
      >
        dassana.svg
      </svg>
    </span>
  </div>
</div>
`;
